--- a/demo1/1.2/Jenkinsfile
+++ b/demo1/1.2/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
     }
     post {
         always {
-            echo "Prints wether deploy happend or not, success or failure"
+            echo 'Prints wether deploy happend or not, success or failure'
         }
     }
 }
