--- a/demo1/1.2/Jenkinsfile
+++ b/demo1/1.2/Jenkinsfile
@@ -9,8 +9,22 @@ pipeline {
             environment {
                 LOG_LEVEL='INFO'
             }
-            steps {
-                echo "Building release ${RELEASE} with log level ${LOG_LEVEL}"
+            parallel {
+                stage ('linux-arm64') {
+                    steps {
+                        echo "Building release ${RELEASE} for ${STAGE_NAME} with log level ${LOG_LEVEL}"
+                    }
+                }
+                stage ('linux-amd64') {
+                    steps {
+                        echo "Building release ${RELEASE} for ${STAGE_NAME} with log level ${LOG_LEVEL}"
+                    }
+                }
+                stage ('windows-x86-x64') {
+                    steps {
+                        echo "Building release ${RELEASE} for ${STAGE_NAME} with log level ${LOG_LEVEL}"
+                    }
+                }
             }
         }
         stage('Test') {
