--- a/demo1/1.2/Jenkinsfile
+++ b/demo1/1.2/Jenkinsfile
@@ -4,32 +4,31 @@ pipeline {
         RELEASE='0.0.1'
     }
     stages {
-        stage ('Build') {
-            agent any
+        stage('Build') {
             environment {
                 LOG_LEVEL='INFO'
             }
             parallel {
-                stage ('linux-arm64') {
+                stage('linux-arm64') {
                     steps {
                         echo "Building release ${RELEASE} for ${STAGE_NAME} with log level ${LOG_LEVEL}"
                     }
-                }
-                stage ('linux-amd64') {
+                } 
+                stage('linux-amd64') {
                     steps {
                         echo "Building release ${RELEASE} for ${STAGE_NAME} with log level ${LOG_LEVEL}"
                     }
-                }
-                stage ('windows-x86-x64') {
+                } 
+                stage('windows-amd64') {
                     steps {
                         echo "Building release ${RELEASE} for ${STAGE_NAME} with log level ${LOG_LEVEL}"
                     }
-                }
+                } 
             }
         }
         stage('Test') {
             steps {
-                echo "Testing release ${RELEASE} ..."
+                echo "Testing releas ${RELEASE}..."
             }
         }
         stage('Deploy') {
@@ -47,7 +46,7 @@ pipeline {
     }
     post {
         always {
-            echo 'Prints wether deploy happend or not, success or failure'
+            echo 'Prints wether deploy happened or not, success or failure'
         }
     }
 }
